@@ -10,6 +10,7 @@ Version 1.3.13+svn:
  * Sound and music:
    * The timer bell in MP starts when there are 20 seconds left and fades in
      gradually for 10 seconds.
+   * Fixed oos on unit advancement if wml had battle/die events
    * Fixed timer bell not always playing.
 
 Version 1.3.13:
